@@ -78,6 +78,7 @@ static char *config_map[NUMBER_OF_CONFIG_ENTRIES] = {
     "IPT_DNAT_ACCESS",
     "IPT_SNAT_ACCESS",
     "IPT_MASQUERADE_ACCESS",
+    "ENABLE_IPT_COMMENT_CHECK",
 #elif FIREWALL_IPFW
     "FLUSH_IPFW_AT_INIT",
     "FLUSH_IPFW_AT_EXIT",
