@@ -264,6 +264,15 @@
 #IPT_SNAT_ACCESS         SNAT, nat, POSTROUTING, 1, FWKNOP_POSTROUTING, 1;
 #IPT_MASQUERADE_ACCESS   MASQUERADE, nat, POSTROUTING, 1, FWKNOP_POSTROUTING, 1;
 
+# The ENABLE_COMMENT_MATCH_CHECK variable instructs fwknopd to check for the
+# iptables 'comment' match at start up.  If it's not found, then fwknopd will
+# exit and throw an error.  This variable is enabled by default, but can be
+# disabled if you want fwknopd to run without being sure that the comment match
+# if available (not recommended, since the comment match enables new SPA rules
+# to be timed out).
+#
+#ENABLE_IPT_COMMENT_CHECK        Y;
+
 ##############################################################################
 # Parameters specific to ipfw:
 #
