@@ -104,18 +104,19 @@
 */
 #if FIREWALL_IPTABLES
 
-  #define DEF_FLUSH_IPT_AT_INIT     "Y"
-  #define DEF_FLUSH_IPT_AT_EXIT     "Y"
-  #define DEF_ENABLE_IPT_FORWARDING "N"
-  #define DEF_ENABLE_IPT_LOCAL_NAT  "Y"
-  #define DEF_ENABLE_IPT_SNAT       "N"
-  #define DEF_ENABLE_IPT_OUTPUT     "N"
-  #define DEF_IPT_INPUT_ACCESS      "ACCEPT, filter, INPUT, 1, FWKNOP_INPUT, 1"
-  #define DEF_IPT_OUTPUT_ACCESS     "ACCEPT, filter, OUTPUT, 1, FWKNOP_OUTPUT, 1"
-  #define DEF_IPT_FORWARD_ACCESS    "ACCEPT, filter, FORWARD, 1, FWKNOP_FORWARD, 1"
-  #define DEF_IPT_DNAT_ACCESS       "DNAT, nat, PREROUTING, 1, FWKNOP_PREROUTING, 1"
-  #define DEF_IPT_SNAT_ACCESS       "SNAT, nat, POSTROUTING, 1, FWKNOP_POSTROUTING, 1"
-  #define DEF_IPT_MASQUERADE_ACCESS "MASQUERADE, nat, POSTROUTING, 1, FWKNOP_POSTROUTING, 1"
+  #define DEF_FLUSH_IPT_AT_INIT         "Y"
+  #define DEF_FLUSH_IPT_AT_EXIT         "Y"
+  #define DEF_ENABLE_IPT_FORWARDING     "N"
+  #define DEF_ENABLE_IPT_LOCAL_NAT      "Y"
+  #define DEF_ENABLE_IPT_SNAT           "N"
+  #define DEF_ENABLE_IPT_OUTPUT         "N"
+  #define DEF_ENABLE_IPT_COMMENT_CHECK  "Y"
+  #define DEF_IPT_INPUT_ACCESS          "ACCEPT, filter, INPUT, 1, FWKNOP_INPUT, 1"
+  #define DEF_IPT_OUTPUT_ACCESS         "ACCEPT, filter, OUTPUT, 1, FWKNOP_OUTPUT, 1"
+  #define DEF_IPT_FORWARD_ACCESS        "ACCEPT, filter, FORWARD, 1, FWKNOP_FORWARD, 1"
+  #define DEF_IPT_DNAT_ACCESS           "DNAT, nat, PREROUTING, 1, FWKNOP_PREROUTING, 1"
+  #define DEF_IPT_SNAT_ACCESS           "SNAT, nat, POSTROUTING, 1, FWKNOP_POSTROUTING, 1"
+  #define DEF_IPT_MASQUERADE_ACCESS     "MASQUERADE, nat, POSTROUTING, 1, FWKNOP_POSTROUTING, 1"
 
 /* Ipfw-specific defines
 */
@@ -201,6 +202,7 @@ enum {
     CONF_IPT_DNAT_ACCESS,
     CONF_IPT_SNAT_ACCESS,
     CONF_IPT_MASQUERADE_ACCESS,
+    CONF_ENABLE_IPT_COMMENT_CHECK,
 #elif FIREWALL_IPFW
     CONF_FLUSH_IPFW_AT_INIT,
     CONF_FLUSH_IPFW_AT_EXIT,
